--- a/pages/team.html
+++ b/pages/team.html
@@ -47,7 +47,7 @@
           <div class="container-fluid">
             <nav class="navbar navbar-expand-lg custom_nav-container">
               <a class="navbar-brand pointer" href="../index.html">
-                <span><i class="fa-solid fa-web-awesome "></i> Divyanshu </span>
+                <span><i class="fa-solid fa-web-awesome"></i> Divyanshu </span>
               </a>
 
               <button
@@ -79,7 +79,11 @@
                     <a class="nav-link" href="./team.html">Team</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:3000/signin.html" title="Login">
+                    <a
+                      class="nav-link"
+                      href="http://localhost:3000/signin.html"
+                      title="Login"
+                    >
                       <i class="fa fa-user" aria-hidden="true"></i>
                     </a>
                   </li>
@@ -226,6 +230,11 @@
               </div>
             </div>
           </div>
+          <div class="btn-box">
+            <a href="./pages/team.html">
+               Show More 
+            </a>
+          </div>
         </div>
       </section>
       <!-- end team section -->
@@ -309,8 +318,7 @@
       <div class="container">
         <p>
           &copy;
-          <span id="displayYear"></span> All
-          Rights Reserved By
+          <span id="displayYear"></span> All Rights Reserved By
           <a href="../index.html">Bhardwaj Computers</a>
         </p>
       </div>
